--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>korver.dev</title>
 </head>
 <body>
-    
+    <header>
+        <object type="image/svg+xml" data="img/logo.svg">Logo</object>
+    </header>
 </body>
 </html>
