--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>korver.dev</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
         <object type="image/svg+xml" data="img/logo.svg">Logo</object>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="work.html">Work</a>
+            <a href="resume.html">Resume</a>
+        </nav>
     </header>
 </body>
 </html>
