--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,13 @@
             <a href="resume.html">Resume</a>
         </nav>
     </header>
+    <footer>
+         <nav>
+             <a href="https://github.com/Casey-Kiewit"><img src="img/github.png" alt="GitHub"></a>
+             <a href="https://www.linkedin.com/in/korverdev"><img src="img/linkedin.png" alt="Linkedin"></a>
+             <a href="mailto:casey@korver.dev">@</a>
+         </nav>
+         <p>© 2022, Casey Korver</p>
+    </footer>
 </body>
 </html>
