--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>korver.dev</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,11 @@
             <a href="resume.html">Resume</a>
         </nav>
     </header>
+    <main>
+        <p>Hello.</p>
+        <p>My name is Casey Korver.</p>
+        <p>I'm a DevOps Engineer.</p>
+    </main>
     <footer>
          <nav>
              <a href="https://github.com/Casey-Kiewit"><img src="img/github.png" alt="GitHub"></a>
