Correct typo in id

--- a/src/resume.html
+++ b/src/resume.html
@@ -21,7 +21,7 @@
         <h1>Casey Korver</h1>
         <div id="grid">
             <section id="jobs"></section>
-            <section id="eductation"></section>
+            <section id="education"></section>
             <section id="contact"></section>
             <section id="skills"></section>
         </div>
