Add information from old resume for job section

--- a/src/resume.html
+++ b/src/resume.html
@@ -19,12 +19,46 @@
     </header>
     <main>
         <h1>Casey Korver</h1>
-        <div id="grid">
-            <section id="jobs"></section>
+        <article id="grid">
+            <section id="jobs">
+                <dl>
+                    <dt>DevOps Engineer</dt>
+                    <dd>Kiewit | Remote</dd>
+                    <dd>2021 - Current</dd>
+
+                    <dt>IT Helpdesk</dt>
+                    <dd>East River Electric | Madison, SD</dd>
+                    <dd>2020 - 2021</dd>
+
+                    <dt>Contracted Small Business IT Support</dt>
+                    <dd>MWI Health | Sioux Falls, SD</dd>
+                    <dd>2019 - 2021</dd>
+
+                    <dt>Tutoring: Computer Science</dt>
+                    <dd>Independent | Madison, SD</dd>
+                    <dd>2019 - 2020</dd>
+
+                    <dt>Soil Sampler</dt>
+                    <dd>CENTROL Crop Consulting | Hadley, MN</dd>
+                    <dd>Summer 2019</dd>
+                
+                    <dt>Dietary Aide / Activities Coordinator</dt>
+                    <dd>Slayton Nursing Home | Slayton, MN</dd>
+                    <dd>2018</dd>
+
+                    <dt>IT Services & Data Recovery</dt>
+                    <dd>Freelance | Worldwide</dd>
+                    <dd>2014-2019</dd>
+
+                    <dt>Computer Repair</dt>
+                    <dd>The Computer Guy | Benton, KS</dd>
+                    <dd>2013-2014</dd>
+                </dl>
+            </section>
             <section id="education"></section>
             <section id="contact"></section>
             <section id="skills"></section>
-        </div>
+        </article>
     </main>
     <footer>
          <nav>
