Add information from old resume for education section

--- a/src/resume.html
+++ b/src/resume.html
@@ -21,6 +21,8 @@
         <h1>Casey Korver</h1>
         <article id="grid">
             <section id="jobs">
+                <h2>Work History</h2>
+
                 <dl>
                     <dt>DevOps Engineer</dt>
                     <dd>Kiewit | Remote</dd>
@@ -55,7 +57,16 @@
                     <dd>2013-2014</dd>
                 </dl>
             </section>
-            <section id="education"></section>
+            <section id="education">
+                <h2>Education</h2>
+
+                <dl>
+                    <dt>DSU | Madison, SD</dt>
+                    <dd>Bachelor of Computer Science</dd>
+                    <dd><i>magna cum laude</i></dd>
+                    <dd>Graduated Spring 2021</dd>
+                </dl>
+            </section>
             <section id="contact"></section>
             <section id="skills"></section>
         </article>
