Add information from old resume for contact section

--- a/src/resume.html
+++ b/src/resume.html
@@ -57,6 +57,7 @@
                     <dd>2013-2014</dd>
                 </dl>
             </section>
+
             <section id="education">
                 <h2>Education</h2>
 
@@ -67,7 +68,13 @@
                     <dd>Graduated Spring 2021</dd>
                 </dl>
             </section>
-            <section id="contact"></section>
+
+            <section id="contact">
+                <p><a href="https://korver.dev">Website: korver.dev</a></p>
+                <p><a href="mailto:casey@korver.dev">Email: casey@korver.dev</a></p>
+                <p><a href="tel:6056719295">Phone: 605-671-9295</a></p>
+            </section>
+
             <section id="skills"></section>
         </article>
     </main>
