--- a/src/resume.html
+++ b/src/resume.html
@@ -70,6 +70,8 @@
             </section>
 
             <section id="contact">
+                <h2>Contact Information</h2>
+                
                 <p><a href="https://korver.dev">Website: korver.dev</a></p>
                 <p><a href="mailto:casey@korver.dev">Email: casey@korver.dev</a></p>
                 <p><a href="tel:6056719295">Phone: 605-671-9295</a></p>
