--- a/src/resume.html
+++ b/src/resume.html
@@ -71,13 +71,44 @@
 
             <section id="contact">
                 <h2>Contact Information</h2>
-                
+
                 <p><a href="https://korver.dev">Website: korver.dev</a></p>
                 <p><a href="mailto:casey@korver.dev">Email: casey@korver.dev</a></p>
                 <p><a href="tel:6056719295">Phone: 605-671-9295</a></p>
             </section>
 
-            <section id="skills"></section>
+            <section id="skills">
+                <h2>Skills</h2>
+                
+                <ul>
+                    <li>Development:
+                        <ul>
+                            <li>C/C++</li>
+                            <li>Documentation & Technical Writing</li>
+                            <li>Python</li>
+                            <li>Web Technologies</li>
+                        </ul>
+                    </li>
+                    <li>
+                        CI/CD:
+                        <ul>
+                            <li>Automated Builds</li>
+                            <li>Automated Deployments</li>
+                            <li>Automated Testing</li>
+                            <li>GitHub Workflows</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Hosting:
+                        <ul>
+                            <li>Azure</li>
+                            <li>Docker</li>
+                            <li>ESXi</li>
+                            <li>Proxmox</li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
         </article>
     </main>
     <footer>
