--- a/src/resume.html
+++ b/src/resume.html
@@ -39,22 +39,6 @@
                     <dt>Tutoring: Computer Science</dt>
                     <dd>Independent | Madison, SD</dd>
                     <dd>2019 - 2020</dd>
-
-                    <dt>Soil Sampler</dt>
-                    <dd>CENTROL Crop Consulting | Hadley, MN</dd>
-                    <dd>Summer 2019</dd>
-                
-                    <dt>Dietary Aide / Activities Coordinator</dt>
-                    <dd>Slayton Nursing Home | Slayton, MN</dd>
-                    <dd>2018</dd>
-
-                    <dt>IT Services & Data Recovery</dt>
-                    <dd>Freelance | Worldwide</dd>
-                    <dd>2014-2019</dd>
-
-                    <dt>Computer Repair</dt>
-                    <dd>The Computer Guy | Benton, KS</dd>
-                    <dd>2013-2014</dd>
                 </dl>
             </section>
 
@@ -62,7 +46,7 @@
                 <h2>Education</h2>
 
                 <dl>
-                    <dt>DSU | Madison, SD</dt>
+                    <dt>Dakota State University</dt>
                     <dd>Bachelor of Computer Science</dd>
                     <dd><i>magna cum laude</i></dd>
                     <dd>Graduated Spring 2021</dd>
@@ -79,7 +63,7 @@
 
             <section id="skills">
                 <h2>Skills</h2>
-                
+
                 <ul>
                     <li>Development:
                         <ul>
@@ -92,9 +76,7 @@
                     <li>
                         CI/CD:
                         <ul>
-                            <li>Automated Builds</li>
-                            <li>Automated Deployments</li>
-                            <li>Automated Testing</li>
+                            <li>Automated Testing, Builds, & Deployments</li>
                             <li>GitHub Workflows</li>
                         </ul>
                     </li>
