--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         
         <nav>
             <a href="index.html">Home</a>
-            <a href="work.html">Work</a>
+            <!-- <a href="work.html">Work</a> -->
             <a href="resume.html">Resume</a>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         <p>My name is Casey Korver.</p>
         <p>I'm a DevOps Engineer.</p>
     </main>
-    
+
     <footer>
          <nav>
              <a href="https://github.com/Casey-Kiewit"><img src="img/github.png" alt="GitHub"></a>
