--- a/src/resume.html
+++ b/src/resume.html
@@ -15,7 +15,7 @@
         
         <nav>
             <a href="index.html">Home</a>
-            <a href="work.html">Work</a>
+            <!-- <a href="work.html">Work</a> -->
             <a href="resume.html">Resume</a>
         </nav>
     </header>
