--- a/src/resume.html
+++ b/src/resume.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <svg width="80" height="80">
+        <svg id="logo" width="80" height="80">
             <rect id="pixel" width="20" height="20" rx="4"/>
             <use href="#pixel" x="30"/>
             <use href="#pixel" x="60"/>
