Add 'soft skills' section

--- a/src/resume.html
+++ b/src/resume.html
@@ -71,25 +71,29 @@
                     <li>Development:
                         <ul>
                             <li>C/C++</li>
-                            <li>Documentation & Technical Writing</li>
                             <li>Python</li>
                             <li>Web Technologies</li>
                         </ul>
                     </li>
-                    <li>
-                        CI/CD:
+                    <li>CI/CD:
                         <ul>
                             <li>Automated Testing, Builds, & Deployments</li>
                             <li>GitHub Workflows</li>
                         </ul>
                     </li>
-                    <li>
-                        Hosting:
+                    <li>Hosting:
                         <ul>
                             <li>Azure</li>
                             <li>Docker</li>
                             <li>ESXi</li>
                             <li>Proxmox</li>
+                        </ul>
+                    </li>
+                    <li>Soft Skills:
+                        <ul>
+                            <li>Agile Development</li>
+                            <li>Documentation</li>
+                            <li>Technical Writing</li>
                         </ul>
                     </li>
                 </ul>
