Add more soft skills

--- a/src/resume.html
+++ b/src/resume.html
@@ -92,6 +92,7 @@
                     <li>Soft Skills:
                         <ul>
                             <li>Agile Development</li>
+                            <li>Code Reviews</li>
                             <li>Documentation</li>
                             <li>Technical Writing</li>
                         </ul>
