Add 'information technology' section to 'skills'

--- a/src/resume.html
+++ b/src/resume.html
@@ -99,6 +99,13 @@
                             <li>Proxmox</li>
                         </ul>
                     </li>
+                    <li>Information Technology:
+                        <ul>
+                            <li>Corporate Server Environments</li>
+                            <li>Linux & Windows Experience</li>
+                            <li>Active Directory</li>
+                        </ul>
+                    </li>
                     <li>Soft Skills:
                         <ul>
                             <li>Agile Development</li>
