--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
          <nav>
              <a href="https://github.com/Casey-Kiewit"><img src="img/github.png" alt="GitHub"></a>
              <a href="https://www.linkedin.com/in/korverdev"><img src="img/linkedin.png" alt="Linkedin"></a>
-             <a href="mailto:casey@korver.dev">@</a>
+             <a href="mailto:casey@korver.dev"><img src="img/email.png" alt="Email"></a>
          </nav>
          <p>© 2022, Casey Korver</p>
     </footer>
